# cellm

./: .gitignore  Cargo.toml  PERFORMANCE_ANALYSIS.md  README.md  a.py  paper.md  test_async_decode.rs  test_neon.rs  test_threads.rs
bindings/ios/: project.yml
bindings/ios/CellmDemo/: CellmDemoApp.swift  CellmFFI.swift  ChatView.swift  ConcurrentChatView.swift  GenerationSettingsSheet.swift  GlobalEngineCache.swift  LLMView.swift  ModelDataProcessor.swift  ModelsView.swift  RemoteAssets.swift  VLMView.swift
bindings/ios/CellmDemo.xcodeproj/: project.pbxproj
bindings/kotlin/: build.gradle  gradlew  local.properties  settings.gradle
bindings/kotlin/demo/: build.gradle
bindings/kotlin/demo/src/main/: AndroidManifest.xml
bindings/kotlin/demo/src/main/java/com/cellm/demo/: MainActivity.kt
bindings/kotlin/demo/src/main/res/values/: themes.xml
bindings/kotlin/src/main/kotlin/com/cellm/sdk/: CellmEngine.kt  CellmSession.kt  CellmTokenizer.kt  CellmVLM.kt  ChatScreen.kt  ChatViewModel.kt  ModelDownloader.kt  ModelPickerScreen.kt  VlmScreen.kt
bindings/kotlin/src/test/kotlin/com/cellm/sdk/: CellmEngineTest.kt
bindings/swift/CellmFFI.xcframework/ios-arm64/Headers/: cellm.h
crates/cellm-cache/src/: kvcache.rs
crates/cellm-cache/tests/: metal_gqa_parity.rs
crates/cellm-core/src/: dtype.rs
crates/cellm-kernels/: Cargo.toml  build.rs  build_out.txt
crates/cellm-kernels/examples/: webgpu_check.rs
crates/cellm-kernels/src/: cpu_kernels.rs  lib.rs  metal.rs  vulkan.rs  wasm.rs  webgpu.rs
crates/cellm-kernels/src/shaders/: add_f32.glsl  attention_f32.glsl  matmul_f32.glsl  mul_f32.glsl  rms_norm_f32.glsl  rope_f32.glsl  silu_f32.glsl  softmax_f32.glsl
crates/cellm-model/: Cargo.toml
crates/cellm-model/examples/: test_v4.rs
crates/cellm-model/src/: batched.rs  cellm_file.rs  deepseek_v4.rs  gemma.rs  gemma_graph.rs  granite.rs  lfm.rs  lib.rs  llama.rs  llama_graph.rs  qwen.rs
crates/cellm-scheduler/src/: batch.rs  lib.rs  policy.rs  session.rs
crates/cellm-sdk/: Cargo.toml
crates/cellm-sdk/src/: ffi.rs  jni.rs  lib.rs  vlm.rs
crates/cellm-wasm/: Cargo.toml
crates/cellm-wasm/src/: lib.rs
crates/cellm-wasm/www/: index.html
docs/: README.md  building-the-android-aar.md  convert-quantized-models.md  gemma4-metal-bug.md  gemma_metal_nan_fix.md  index.html  paged-kv-cache-foundation.md  phase2-foundation.md  phase4-continuous-batching.md  q1_0_g128_cpu_optimization.md  qwen3_5-deltanet.md  vlm-smolvlm-onnx.md  vlm_metal_optimization.md  vulkan-backend-and-android-aar.md  wasm-backend.md
docs/wasm/: index.html  test-node.mjs
docs/wasm/pkg/: cellm_wasm.js  cellm_wasm_bg.wasm
scripts/: build-wasm.sh  dflash_mlx_forward.py  run_dflash_inference.py  run_dflash_qwen35_4b.py
tests/: samples.txt
tools/: convert_lfm_hf.py  quantize_lfm_cellm.py  validate_glsl.sh
tools/bench/: Cargo.toml
tools/bench/src/: main.rs
tools/infer/src/: main.rs
