[package]
name = "cellm-kernels"
version = "0.1.0"
edition = "2021"
description = "CPU SIMD, Metal compute shaders, and Vulkan for cellm."

[dependencies]
cellm-core = { path = "../cellm-core" }
anyhow = { workspace = true }
rayon = { workspace = true }
half = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
wgpu = { version = "24", features = ["webgpu"], optional = true }
ash = { version = "0.38", optional = true }

[features]
default = []
webgpu = ["dep:wgpu"]
vulkan = ["dep:ash"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
metal = "0.27"
objc = "0.2"

[dev-dependencies]
half = { workspace = true }
