[package]
name = "cellm-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for cellm LLM inference engine."

[lib]
crate-type = ["cdylib"]

[dependencies]
cellm-core = { path = "../cellm-core" }
cellm-cache = { path = "../cellm-cache" }
cellm-model = { path = "../cellm-model", features = ["webgpu"] }
cellm-scheduler = { path = "../cellm-scheduler" }
cellm-kernels = { path = "../cellm-kernels", features = ["webgpu"] }
cellm-sdk = { path = "../cellm-sdk", features = ["webgpu"] }
anyhow = { workspace = true }
rayon = { workspace = true }
half = { workspace = true }
bytemuck = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokenizers = { version = "0.21", default-features = false, features = ["unstable_wasm", "fancy-regex"] }
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
esaxx-rs = { version = "0.1.10", default-features = false }
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
wgpu = { version = "24", features = ["webgpu"] }
wasm-bindgen-futures = "0.4"
